src/pages/user/index.scss
.Userpage-container {
  display: flex;
  flex: 1;
  flex-direction: column;
  background-image: inherit;

  &__Userinfo {
    padding-top: 5px;
    padding-bottom: 5px;
    margin-bottom: 2px;

    -webkit-box-shadow:
      inset 0px -1px 0px 0px rgba(255,255,255,1),
      inset 0px -2px 0px 0px rgba(0,0,0,1),
      inset 0px 1px 0px 0px rgba(0,0,0,1),
      inset 0px 2px 0px 0px rgba(255,255,255,1);
    -moz-box-shadow:
      inset 0px -1px 0px 0px rgba(255,255,255,1),
      inset 0px -2px 0px 0px rgba(0,0,0,1),
      inset 0px 1px 0px 0px rgba(0,0,0,1),
      inset 0px 2px 0px 0px rgba(255,255,255,1);
    box-shadow:
      inset 0px -1px 0px 0px rgba(255,255,255,1),
      inset 0px -2px 0px 0px rgba(0,0,0,1),
      inset 0px 1px 0px 0px rgba(0,0,0,1),
      inset 0px 2px 0px 0px rgba(255,255,255,1);

    &__Profile {
      display: flex;
      flex-direction: row;
      padding: 6px;

      &__Picture {
        width: 60px;
        height: 60px;
        border-radius: 50%;
        background-color: black;
        display: flex;

        img {
          width: 100%;
          height: 100%;
          border-radius: 50%;
        }
      }

      &__Follow {
        display: flex;
        flex-direction: column;
        flex-grow: 1;
        margin-left: 4px;

        font-size: 13px;

        &__Numbers {
          flex-basis: 100%;
          display: flex;

          &.Number {
            display: flex;
            flex-basis: 100%;
            flex-direction: column;
            justify-items: center;
            align-items: center;

            * + * {
              margin-top: 2px;
            }
          }
        }

        &__Buttons {
          display: flex;
          margin-left: 10px;
          padding-top: 4px;
          padding-bottom: 2px;
          flex-basis: 100%;
          flex-direction: row;

          * + * {
            margin-left: 3px;
          }
        }
      }
    }

    &__Description {
      display: flex;
      flex-direction: column;
      padding: 6px;
      margin-top: 1px;
      margin-bottom: 1px;

      overflow-wrap: break-word;
      word-wrap: break-word;
      word-break: break-all;
      font-size: 13px;

      * + * {
        margin-top: 4px;
      }

      &__Name {
        font: {
          size: 14px;
          weight: bolder;
        }
      }

      &__Bio {
      }

      &__Website {
      }
    }
  }

  &__Contents {
    display: flex;
    flex-direction: column;
    flex-basis: 100%;

    &__Categories {
      display: flex;
      flex-direction: row;
      margin: 2px;

      * {
        flex-basis: 100%;
        height: 24px;
      }

      * + * {
        margin-left: 1px;
      }
    }

    &__Box {
      display: flex;
      width: inherit;
      height: 0;
      flex: 1;
      flex-direction: column;
      margin-top: 2px;
      padding: 2px;
      font-size: 0;

      -webkit-box-shadow:
        inset -1px -1px 0px 0px rgba(255,255,255,1),
        inset 1px 1px 0px 0px rgba(127,127,127,1),
        inset -2px -2px 0px 0px rgba(224,224,224,1),
        inset 2px 2px 0px 0px rgba(0,0,0,1);
      -moz-box-shadow:
        inset -1px -1px 0px 0px rgba(255,255,255,1),
        inset 1px 1px 0px 0px rgba(127,127,127,1),
        inset -2px -2px 0px 0px rgba(224,224,224,1),
        inset 2px 2px 0px 0px rgba(0,0,0,1);
      box-shadow:
        inset -1px -1px 0px 0px rgba(255,255,255,1),
        inset 1px 1px 0px 0px rgba(127,127,127,1),
        inset -2px -2px 0px 0px rgba(224,224,224,1),
        inset 2px 2px 0px 0px rgba(0,0,0,1);

      &__Scrollable {
        flex: 1;
        overflow-y: scroll;

        img {
          width: 94.5px;
          height: 94.5px;
          object-fit: cover;

          @for $i from 1 through 3 {
            &:nth-child(#{$i}) {
              margin-top: 0px;
            }
          }

          &:nth-child(3n+1) {
            margin-left: 0px;
          }
        }

        img + img {
          margin-left: 1px;
          margin-top: 1px;
        }
      }
    }
  }
}

